Change: アカウント設定のエラー表示。

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,54 +1,72 @@
-<div id="app">
-  <%= render "shared/navbar" %>
-  <div class="container-fluid">
-    <div class="row flex-xl-nowrap justify-content-center">
-      <main class="main mt-3" style="max-width: 500px;">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= render "shared/navbar" %>
+<div class="container-fluid">
+  <div class="row flex-xl-nowrap justify-content-center">
+    <main class="main mt-3" style="max-width: 500px;">
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%#= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="form-group">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-          </div>
-
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+          <% if resource.errors.messages[:email].present? %>
+            <div class="form-error mt-1"><%= resource.errors.messages[:email].first %></div>
           <% end %>
+        </div>
 
-          <div class="form-group">
-            <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
-            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
-            <% if @minimum_password_length %>
-              <div class="mt-1">
-                <em style="color: #888;"><%= @minimum_password_length %> characters minimum</em>
-              </div>
-            <% end %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :new_password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-          </div>
-
-          <div class="form-group">
-            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-            <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-          </div>
-
-          <div class="actions">
-            <%= link_to "Cancel", root_path, class: 'btn btn-outline-secondary mr-2' %>
-            <%= f.submit "Update", class: 'btn btn-primary' %>
-          </div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
 
-        <h3 class="mt-5">Cancel my account</h3>
+        <div class="form-group">
+          <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+          <% if @minimum_password_length %>
+            <div class="mt-1">
+              <em style="color: #888;"><%= @minimum_password_length %> characters minimum</em>
+            </div>
+          <% end %>
+          <% if resource.errors.messages[:password].present? %>
+            <div class="form-error mt-1"><%= resource.errors.messages[:password].first %></div>
+          <% end %>
+        </div>
 
-        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-outline-danger' %></p>
+        <div class="form-group">
+          <%= f.label :new_password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          <% if resource.errors.messages[:password_confirmation].present? %>
+            <div class="form-error mt-1"><%= resource.errors.messages[:password_confirmation].first %></div>
+          <% end %>
+        </div>
 
-      </main>
-    </div>
+        <div class="form-group">
+          <%= f.label :current_password do %>
+            Current password<br />
+            <i>(we need your current password to confirm your changes)</i>
+          <% end %>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+          <% if resource.errors.messages[:current_password].present? %>
+            <div class="form-error mt-1"><%= resource.errors.messages[:current_password].first %></div>
+          <% end %>
+        </div>
+
+        <div class="actions">
+          <%= link_to "Cancel", root_path, class: 'btn btn-outline-secondary mr-2' %>
+          <%= f.submit "Update", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+
+      <h3 class="mt-5">Cancel my account</h3>
+
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-outline-danger' %></p>
+
+    </main>
   </div>
 </div>
 
+<% if Rails.env.development? %>
+<pre>
+  <%= debug resource.errors.messages.inspect %>
+</pre>
+<% end %>
