--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,32 @@
-<h2>Resend confirmation instructions</h2>
+<%= render "shared/navbar" %>
+<%= render "shared/flash" %>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="row justify-content-center">
+  <div class="col-3 mt-4">
+    <h2>Resend confirmation instructions</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+      <%#= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="field form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email,
+                          autofocus: true,
+                          autocomplete: "email",
+                          class: 'form-control',
+                          value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+        <% if resource.errors.messages[:email].present? %>
+          <div class="form-error mt-1"><%= resource.errors.messages[:email].first %></div>
+        <% end %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+
+    <div class="mt-3">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
