--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,46 @@
-<h2>Change your password</h2>
+<%= render "shared/navbar" %>
+<%= render "shared/flash" %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+<div class="row justify-content-center">
+  <div class="col-3 mt-4">
+    <h2>Change your password</h2>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%#= render "devise/shared/error_messages", resource: resource %>
+      <%= f.hidden_field :reset_password_token %>
+
+      <div class="field form-group">
+        <%= f.label :password, "New password" do %>
+          New password
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+          <% end %>
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'form-control' %>
+        <% if resource.errors.messages[:password].present? %>
+          <div class="form-error mt-1"><%= resource.errors.messages[:password].first %></div>
+        <% end %>
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        <% if resource.errors.messages[:password_confirmation].present? %>
+          <div class="form-error mt-1"><%= resource.errors.messages[:password_confirmation].first %></div>
+        <% end %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Change my password", class: 'btn btn-primary' %>
+      </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= render "devise/shared/links" %>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+<% if Rails.env.development? %>
+<pre>
+  <%= debug resource.errors.messages.inspect %>
+</pre>
 <% end %>
-
-<%= render "devise/shared/links" %>
