--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,14 +1,18 @@
 <%= render "shared/navbar" %>
+<%= render "shared/flash" %>
 
 <div class="row justify-content-center">
   <div class="col-3 mt-4">
     <h2>Forgot your password?</h2>
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+      <%#= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field form-group">
-        <%= f.label :email %><br />
+        <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+        <% if resource.errors.messages[:email].present? %>
+          <div class="form-error mt-1"><%= resource.errors.messages[:email].first %></div>
+        <% end %>
       </div>
 
       <div class="actions">
