--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
 <%= render "shared/navbar" %>
+<%= render "shared/flash" %>
+
 <div class="container-fluid">
   <div class="row flex-xl-nowrap justify-content-center">
     <main class="main mt-3" style="max-width: 500px;">
