Change: footerをパーシャルに。

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,6 +48,10 @@
   </div>
 </div>
 
+<div class="pos-bottom">
+  <%= render "shared/footer" %>
+</div>
+
 <% if Rails.env.development? %>
 <pre>
   <%= debug resource.errors.messages %>
