--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -38,5 +38,8 @@
               = hidden_field_tag 'edit_avatar_image', true
               = f.submit "submit", class: 'd-none avator-form__submit'
 
+.pos-bottom
+  = render "shared/footer"
+
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
