--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -33,5 +33,8 @@
 
             = submit_tag "Save changes", { class: 'btn btn-primary mt-2' }
 
+.pos-bottom
+  = render "shared/footer"
+
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
