--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -42,9 +42,8 @@
             div
               = f.submit "Add Bookmark", class: 'btn btn-primary'
 
-.footer.bg-dark.pos-bottom
-  .text-right.text-white.p-1.px-3
-    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © HippoHack
+.pos-bottom
+  = render "shared/footer"
 
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
