--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -39,6 +39,10 @@
   </div>
 </div>
 
+<div class="pos-bottom">
+  <%= render "shared/footer" %>
+</div>
+
 <% if Rails.env.development? %>
 <pre>
   <%= debug resource.errors.messages.inspect %>
