--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -2,28 +2,28 @@ nav.navbar.navbar-light.bg-dark
   = link_to(root_path, class: 'navbar-brand text-white', 'data-turbolinks': false) do
     img.d-inline-block.align-top.mr-2 src="#{image_url('bookmarks.svg')}" width="30" height="30" alt=""
     | HippoMarks <span class="navbar__version">#{ENV.fetch('APP_VERSION')}</span>
-  ul.flex-row.navbar-nav
-    li.nav-item.ml-auto.px-2
-      a.btn.btn-sm.text-white href="#" Bookmark
-    li.nav-item.ml-auto.px-2
-      a.btn.btn-sm.text-white href="#" Blogs
   ul.flex-row.navbar-nav.ml-auto
     li.nav-item.ml-auto.px-2
-      a.btn.btn-sm.text-white href="#"
+      a.btn.btn-sm.text-white href="#{new_account_session_path}"
         | Login
     li.nav-item.ml-auto.px-2
-      a.btn.btn-outline-info.btn-sm.text-white href="#"
+      a.btn.btn-outline-info.btn-sm.text-white href="#{new_account_registration_path}"
         | Sign up
 
 .eyecatch
   h1.text-hide HippoMarks
-  .row.justify-content-center
+  .row.justify-content-center.mx-0
     .eyecatch__lead
-      p 色は匂へど散りぬるを、我が世たれぞ常ならむ。有為の奥山今日越えて、浅き夢見じ、酔ひもせず。
-      p 色は匂へど散りぬるを、我が世たれぞ常ならむ。有為の奥山今日越えて、浅き夢見じ、酔ひもせず。色は匂へど散りぬるを、我が世たれぞ常ならむ。有為の奥山今日越えて、浅き夢見じ、酔ひもせず。
-  .row.justify-content-center
+      p.text-center A bookmark bar that you can access from anywhere to change your browser.
+      p.text-center There is no need to repeat export and import anymore.
+      / p.text-center ころころブラウザを変更するあなたに、どこからでもアクセスできるブックマークバーを。
+      / p.text-center もうエクスポート、インポートを繰り返す必要はありません。
+  .row.justify-content-center.mx-0
     .eyecatch__btn-group
-      a.btn.btn-outline-light href="#" Sign up
+      a.btn.btn-outline-light href="#{new_account_registration_path}" Sign up
       div.mt-2.text-white
         | Do you already have an account?
-        a.ml-3.text-white href="#" Login >
+        a.ml-3.text-white href="#{new_account_session_path}" Login >
+
+.pos-bottom
+  = render "shared/footer"
