--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -5,7 +5,7 @@
       a.text-white.mr-3 href="https://blog.hippohack.me/" target="_blank" Blogs
       a.patreon-btn.text-white.mr-3.btn.btn-outline-info.btn-sm href="https://www.patreon.com/hippohack" target="_blank" Patreon
     .text-right.text-white.p-3
-      a.text-white.mr-3 href="#TODO:" Terms of Service
-      a.text-white.mr-3 href="#TODO:" Privacy
-      a.text-white.mr-3 href="#TODO:" Cookies
+      / a.text-white.mr-3 href="#TODO:" Terms of Service
+      / a.text-white.mr-3 href="#TODO:" Privacy
+      / a.text-white.mr-3 href="#TODO:" Cookies
       span.copyright.text-white © HippoHack
