Change: Sort setting added to settings.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -315,3 +315,18 @@ main {
     margin: 0 10px;
   }
 }
+
+.sort-setting-btn {
+  &.dropdown-toggle {
+    &:after {
+      display: none;
+    }
+  }
+}
+
+.sort-setting-btn-menu {
+  &.dropdown-menu {
+    top: 48px;
+    left: 255px;
+  }
+}
