--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -13,6 +13,12 @@
                   = hidden_field_tag "setting[#{index}][key]", setting.key
                   / TODO: Make collection record
                   = select_tag "setting[#{index}][value]", options_for_select([['Japanese', 'Japanese'], ['English', 'English']], setting.value), class: 'form-control'
+              - if setting.key == 'item_sort'
+                .form-group
+                  = label_tag setting.key, nil
+                  = hidden_field_tag "setting[#{index}][key]", setting.key
+                  / TODO: Make collection record
+                  = select_tag "setting[#{index}][value]", options_for_select([['Optional', 'optional'], ['Name', 'name'], ['Created', 'created'], ['Updated', 'updated']], setting.value), class: 'form-control'
               - elsif setting.key == 'show_many_visits' || setting.key == 'show_history'
                 .form-group
                   = label_tag setting.key, nil, for: ''
