Add: notice flash.

--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -1,5 +1,6 @@
 #app
   = render "shared/navbar"
+  = render "shared/flash"
   .row.justify-content-center
     main.main.mt-4 style="max-width: 500px;"
       h2 Setting edit
