--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -345,3 +345,13 @@ main {
     }
   }
 }
+
+.item-dropzone-area {
+  display: block;
+  width: 100%;
+  height: 25px;
+  margin-bottom: 2px;
+  border-radius: 2px;
+  background-color: #e6e6e6;
+  border: dashed 2px #ccc;
+}
