--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  */
 
+$mainColor: #01c68b;
+
 @import "bootstrap";
 @import "font-awesome"; // v4.7.0
 
