--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -355,3 +355,39 @@ main {
   background-color: #e6e6e6;
   border: dashed 2px #ccc;
 }
+
+// release-notes
+.release-notes {
+  color: #333;
+
+  &__head {
+    padding: 60px 15px;
+    // background-color: $mainColor;
+  }
+
+  &__body {
+    // margin-top: 40px;
+  }
+
+  &__side {
+    ul {
+      padding: 0 15px;
+
+      li {
+        list-style-type: none;
+        margin-bottom: 20px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  &__content {
+    h3 {
+      margin-top: 30px;
+      font-size: 1.5rem;
+    }
+  }
+}
+
