Change: ヒストリーの削除。

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -391,3 +391,16 @@ main {
   }
 }
 
+.history-delete {
+  background-color: rgba(0, 0, 0, 0.05);
+  padding: 10px 20px;
+}
+
+// vuejs transition
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+/* .fade-leave-active below version 2.1.8 */
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
