--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,11 +12,21 @@
           aside.release-notes__side
             ul
               li
+                a href="#v040" 2019/11/16（v0.4.0）
+              li
                 a href="#v031" 2019/11/07（v0.3.1）
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v031.release-notes__content
+          #v032.release-notes__content.mt-0
+            h2 2019/11/16（v0.4.0）
+            p Has been updated.
+            h3 Updated
+            ul
+              li <strong>Release notes: </strong>Added a page that clearly shows the updated contents of the application.
+              li <strong>History delete: </strong>Added a function to delete history.
+
+          #v031.release-notes__content.mt-5
             h2 2019/11/07（v0.3.1）
             p Has been updated.
             h3 Fixed
