Change: show comfirm message before submit.

--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -42,7 +42,7 @@ nav.navbar.navbar-light.bg-dark
               span
                 = current_account.profile.name
           hr.my-1
-          = link_to 'History', histories_path, class: 'dropdown-item', 'data-turbolinks': false
+          = link_to 'Histories', histories_path, class: 'dropdown-item', 'data-turbolinks': false
           = link_to 'Add Bookmark', add_bookmark_path, class: 'dropdown-item'
           / = link_to 'Manage Bookmarks', '#TODO:', class: 'dropdown-item'
           = link_to 'Import Bookmarks', import_path, class: 'dropdown-item'
