Add: flash message when delete histories.

--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -1,5 +1,6 @@
 <div id="app">
   <%= render "shared/navbar" %>
+  <%= render "shared/flash" %>
 
   <transition name="fade">
     <div v-if="delete_histories.length" class="history-delete">
