--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -25,7 +25,7 @@ nav.navbar.navbar-light.bg-dark
 
   - if ['home#index', 'bookmarks#search'].include? @loaded_action
     = form_tag(search_bookmarks_path, :method => 'get', class: "flex-grow-1 mr-2")
-      = search_field_tag :s, params[:s], { class: "form-control", id: "search-input", placeholder: "Search..." }
+      search :_param="#{ params[:s].to_json }" :_home_url="#{ ENV.fetch('HOMEURL').to_json }"
 
   - if account_signed_in?
     ul.flex-row.navbar-nav.ml-auto
