Change: release notes.

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -25,6 +25,7 @@
             ul
               li <strong>Release notes: </strong>Added a page that clearly shows the updated contents of the application.
               li <strong>History delete: </strong>Added a function to delete history.
+              li <strong>Bookmark search: </strong>Use ajax communication to search bookmarks.
 
           #v031.release-notes__content.mt-5
             h2 2019/11/07（v0.3.1）
