--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,13 +12,22 @@
           aside.release-notes__side
             ul
               li
+                a href="#v041" 2019/11/16（v0.4.1）
+              li
                 a href="#v040" 2019/11/16（v0.4.0）
               li
                 a href="#v031" 2019/11/07（v0.3.1）
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v032.release-notes__content.mt-0
+          #v041.release-notes__content.mt-0
+            h2 2019/11/16（v0.4.1）
+            p Has been updated.
+            h3 Fixed
+            ul
+              li <strong>Bookmark search: </strong>Fixed an issue where the search result link could not be pressed.
+
+          #v040.release-notes__content.mt-0
             h2 2019/11/16（v0.4.0）
             p Has been updated.
             h3 Updated
