--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,6 +12,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v050" 2019/11/23（v0.5.0）
+              li
                 a href="#v041" 2019/11/16（v0.4.1）
               li
                 a href="#v040" 2019/11/16（v0.4.0）
@@ -20,14 +22,21 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v041.release-notes__content.mt-0
+          #v050.release-notes__content.mt-0
+            h2 2019/11/23（v0.5.0）
+            p Has been updated.
+            h3 Updated
+            ul
+              li Minor corrections.
+
+          #v041.release-notes__content.mt-5
             h2 2019/11/16（v0.4.1）
             p Has been updated.
             h3 Fixed
             ul
               li <strong>Bookmark search: </strong>Fixed an issue where the search result link could not be pressed.
 
-          #v040.release-notes__content.mt-0
+          #v040.release-notes__content.mt-5
             h2 2019/11/16（v0.4.0）
             p Has been updated.
             h3 Updated
@@ -51,5 +60,4 @@
               li <strong>Sort function: </strong>Added processing to change the order of folders by drag and drop.
               li <strong>Set capture image:</strong> Changing the number of job retries.
 
-.pos-bottom
-  = render "shared/footer"
+= render "shared/footer"
