Change: 確認メール送信画面を追加。

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -27,6 +27,7 @@
             p Has been updated, and the server has been moved.
             h3 Updated
             ul
+              li <strong>Sign up: </strong>Added confirmation email sending screen.
               li Minor corrections.
 
           #v041.release-notes__content.mt-5
