--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,6 +12,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v051" 2019/12/13（v0.5.1）
+              li
                 a href="#v050" 2019/11/30（v0.5.0）
               li
                 a href="#v041" 2019/11/16（v0.4.1）
@@ -22,7 +24,14 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v050.release-notes__content.mt-0
+          #v051.release-notes__content.mt-0
+            h2 2019/12/13（v0.5.1）
+            p Has been updated.
+            h3 Updated
+            ul
+              li Minor corrections.
+
+          #v050.release-notes__content.mt-5
             h2 2019/11/30（v0.5.0）
             p Has been updated, and the server has been moved.
             h3 Updated
