--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,6 +12,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v052" 2019/12/21（v0.5.2）
+              li
                 a href="#v051" 2019/12/13（v0.5.1）
               li
                 a href="#v050" 2019/11/30（v0.5.0）
@@ -24,7 +26,14 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v051.release-notes__content.mt-0
+          #v052.release-notes__content.mt-0
+            h2 2019/12/21（v0.5.2）
+            p Has been updated.
+            h3 Updated
+            ul
+              li Minor corrections.
+
+          #v051.release-notes__content.mt-5
             h2 2019/12/13（v0.5.1）
             p Has been updated.
             h3 Updated
