Change: profile更新時のflash設置

--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,5 +1,6 @@
 #app
   = render "shared/navbar"
+  = render "shared/flash"
   main.p-3.
     = form_for @profile, html: { class: "profile-form" } do |f|
       h2 Profile Edit
