--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -19,9 +19,18 @@
 
       .col-8
         = form_for @bookmark, :remote => true do |f|
-          .form-group
-            = f.label :name
-            = f.text_field :name, class: 'form-control'
+          .d-flex
+            .form-group.mr-4
+              = f.label :icon
+              .icon-form__image.cursor-pointer @click="iconSelect"
+                - if @bookmark.icon.present?
+                  = image_tag "#{@bookmark.icon}"
+                - else
+                  i class="fa fa-link mr-2" style="font-size: 18px; margin-top: 12px; margin-left: 6px;"
+              = f.file_field :icon, id: 'icon-select', class: 'd-none', '@change': 'replaceIconImage'
+            .form-group.w-100
+              = f.label :name
+              = f.text_field :name, class: 'form-control'
 
           .form-group
             = f.label :url
