--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,7 +12,7 @@
           aside.release-notes__side
             ul
               li
-                a href="#v052" 2019/12/21（v0.5.2）
+                a href="#v052" 2020/01/04（v0.5.2）
               li
                 a href="#v051" 2019/12/13（v0.5.1）
               li
@@ -27,10 +27,11 @@
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
           #v052.release-notes__content.mt-0
-            h2 2019/12/21（v0.5.2）
+            h2 2020/01/04（v0.5.2）
             p Has been updated.
             h3 Updated
             ul
+              li <strong>Bookmarks: </strong>Site icon can be changed arbitrarily.
               li Minor corrections.
 
           #v051.release-notes__content.mt-5
