--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -49,7 +49,7 @@
               folders :_folders="#{ @folders.to_json }"
 
           = hidden_field_tag :popup, 'true'
-          = hidden_field_tag :top_folder, @top_folder_id
+          = hidden_field_tag :top_folder, @main_folder_id
 
           .d-flex.mt-3
             div.mr-auto
