--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -35,7 +35,7 @@
                 span aria-hidden="true" &times;
             .modal-body
               = f.file_field :avatar, id: 'profile_avatar', class: 'd-none', '@change': "submitAvatar()"
-              button.avator-form__file-up-btn type="button" @click="fileSelect" <i class="fa fa-picture-o" aria-hidden="true"></i> 写真をアップロード
+              button.avator-form__file-up-btn type="button" @click="fileSelect()" <i class="fa fa-picture-o" aria-hidden="true"></i> 写真をアップロード
               = hidden_field_tag 'edit_avatar_image', true
               = f.submit "submit", class: 'd-none avator-form__submit'
 
