--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -33,7 +33,7 @@ nav.navbar.navbar-light.bg-dark
         a.nav-link.dropdown-toggle.text-white href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
           | Menu
         .dropdown-menu aria-labelledby="navbarDropdownMenuLink"
-          = link_to profile_path(current_account.profile), class: 'dropdown-item' do
+          = link_to profile_path(current_account.profile), class: 'dropdown-item', 'data-turbolinks': false do
             .d-flex.align-items-center
               - if current_account.profile.avatar.attached?
                 img.nav-item__avatar.d-inline-block.align-top.mr-2 src="#{url_for(current_account.profile.avatar)}" width="30" height="30" alt=""
