--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-light.bg-dark
 .eyecatch
   h1.text-hide HippoMarks
   .hippo-icon
-    img src="#{image_path('hippo.svg')}" alt=""/
+    img src="#{image_path('hippo.png')}" alt=""/
   .row.justify-content-center.mx-0
     .eyecatch__lead
       p.text-center A bookmark bar that you can access from anywhere to change your browser.
