--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -12,6 +12,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v053" 2020/01/11（v0.5.3）
+              li
                 a href="#v052" 2020/01/04（v0.5.2）
               li
                 a href="#v051" 2019/12/13（v0.5.1）
@@ -26,7 +28,16 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v052.release-notes__content.mt-0
+          #v053.release-notes__content.mt-0
+            h2 2020/01/11（v0.5.3）
+            p Has been updated.
+            h3 Updated
+            ul
+              li <strong>Welcome Page: </strong>The illustration of the Hippo was added to the welcome page.
+              li <strong>Sort: </strong>Bug fixed.
+              li Minor corrections.
+
+          #v052.release-notes__content.mt-5
             h2 2020/01/04（v0.5.2）
             p Has been updated.
             h3 Updated
