--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -1,3 +1,5 @@
+- content_for :title, "Add a bookmark"
+
 #app
   = render "shared/navbar"
   = render "shared/flash"
@@ -5,7 +7,7 @@
   .container-fluid
     .row.flex-xl-nowrap.justify-content-center
       main.main.mt-3 style="max-width: 500px;"
-        h1 Add a bookmark
+        h1 = yield(:title)
         = form_for @bookmark do |f|
           .form-group
             = f.label :name
