--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,9 +1,11 @@
+<% content_for :title, "Resend confirmation instructions" %>
+
 <%= render "shared/navbar" %>
 <%= render "shared/flash" %>
 
 <div class="row justify-content-center">
   <div class="col-3 mt-4">
-    <h2>Resend confirmation instructions</h2>
+    <h2><%= yield(:title) %></h2>
 
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
       <%#= render "devise/shared/error_messages", resource: resource %>
