--- a/app/views/devise/registrations/confirm.html.erb
+++ b/app/views/devise/registrations/confirm.html.erb
@@ -1,9 +1,11 @@
+<% content_for :title, "Confirmation email has been sent" %>
+
 <%= render "shared/navbar" %>
 <%= render "shared/flash" %>
 
 <div class="row justify-content-center">
   <div class="col-9 mt-4">
-    <h2 class="mb-4">Confirmation email has been sent</h2>
+    <h2 class="mb-4"><%= yield(:title) %></h2>
 
     <p>A confirmation email has been sent to the email address you entered.</p>
     <p>Please access the URL in the email you received and continue the registration process.</p>
