--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,11 @@
+<% content_for :title, "Sign up" %>
+
 <%= render "shared/navbar" %>
 <%= render "shared/flash" %>
 
 <div class="row justify-content-center">
   <div class="col-3 mt-4">
-    <h2>Sign up</h2>
+    <h2><%= yield(:title) %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%#= render "devise/shared/error_messages", resource: resource %>
