--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -1,3 +1,5 @@
+- content_for :title, "Welcome"
+
 nav.navbar.navbar-light.bg-dark
   = link_to(root_path, class: 'navbar-brand text-white', 'data-turbolinks': false) do
     img.d-inline-block.align-top.mr-2 src="#{image_path('bookmarks.svg')}" width="30" height="30" alt=""
