--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>HippoMarks[:HippoHack]</title>
+    <title><%= yield(:title) %> | HippoMarks</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
