--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,9 +1,11 @@
+- content_for :title, "Profile Edit"
+
 #app
   = render "shared/navbar"
   = render "shared/flash"
   main.p-3.
     = form_for @profile, html: { class: "profile-form" } do |f|
-      h2 Profile Edit
+      h2 = yield(:title)
       .d-flex
         .avator
           .avator__label Avator
