Change: Update release note.

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -35,7 +35,8 @@
             p Has been updated.
             h3 Updated
             ul
-              li <strong>Welcome Page: </strong>The illustration of the Hippo was added to the welcome page.
+              li <strong>Welcome Page: </strong>The illustration of the Hippo was added to the welcome page. Thank you for my wife.
+              li <strong>Page title: </strong>The page title of each page has been set.
               li <strong>Sort: </strong>Bug fixed.
               li Minor corrections.
 
