Change: page title on welcome page.

--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -1,4 +1,4 @@
-- content_for :title, "Welcome"
+- content_for :title, "Your bookmark bar anywhere"
 
 nav.navbar.navbar-light.bg-dark
   = link_to(root_path, class: 'navbar-brand text-white', 'data-turbolinks': false) do
