Change: console.logを置き換え

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application' %>
   </head>
 
-  <body>
+  <body data-js-debug="<%= @js_debug %>">
     <%= yield %>
   </body>
 </html>
