--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -13,11 +13,14 @@
             - else
               = image_tag "https://dummyimage.com/600x400/e6e6e6/cccccc.png&text=+NO+IMAGE"
           = f.file_field :og_image_url, id: 'site-image-select', class: 'd-none', '@change': 'submitSiteImageEdit'
+          .mt-3
+            = link_to 'Take a capture', take_capture_path(id: @bookmark.id), class: 'btn btn-sm btn-outline-primary mr-2', remote: true
+            button.btn.btn-sm.btn-outline-primary @click="siteImageSelect" Edit
 
           = hidden_field_tag :popup, true
           = hidden_field_tag :site_image_edit, true
           = hidden_field_tag :authenticity_token, form_authenticity_token
-          = f.submit "保存する", class: 'btn btn-primary d-none site-image-form__submit'
+          = f.submit "Save", class: 'btn btn-primary d-none site-image-form__submit'
 
       .col-8
         = form_for @bookmark, :remote => true do |f|
@@ -55,11 +58,11 @@
 
           .d-flex.mt-3
             div.mr-auto
-              = link_to '新しいフォルダ', 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder(#{@main_folder_id.to_json})"
+              = link_to 'Create folder', 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder(#{@main_folder_id.to_json})"
             div.mr-2
-              = link_to 'キャンセル', 'javascript:window.close()', class: 'btn btn-outline-primary'
+              = link_to 'Cancel', 'javascript:window.close()', class: 'btn btn-outline-primary'
             div
-              = f.submit "保存する", class: 'btn btn-primary'
+              = f.submit "Save", class: 'btn btn-primary'
 
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
