Change: エンターでフォーカスのリンク開く

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -38,6 +38,7 @@
             h3 Updated
             ul
               li <strong>Bookmark edit: </strong>Added function to re-execute capture acquisition.
+              li <strong>Search: </strong>Now possible to move the focus and open links by key input from search results.
               li Minor corrections.
 
           #v053.release-notes__content.mt-5
