Change: 軽微な体裁調整。

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -251,6 +251,7 @@ main {
   &__image {
     position: relative;
     display: block;
+    border: 1px solid #ced4da;
 
     &:hover {
       &:before {
